* 1.9.3
	* New features:
		- User can input binary data via ssdb-cli(2016-02-24)
		- Add ip_filter relative commands(2016-02-17)
		- CLI comands with nagios output format
	* Bug fixes:
		- Fix ttl not be deleted when deleting the only one key with ttl in the db, issue#885(2016-03-02)
		- Fix bug when connecting to multi masters, the slave saves only one master's status(2016-03-01)
* 1.9.2
	* New features:
		- Binlog capacity can be set in config file(2016-01-14)
		- Provide zfix command to repair broken zset(2015-12-02)
		- Supports specifying slaveof.host in ssdb.conf(2015-11-23)
		- Do not allow flushdb when replication is in use(2015-11-16)
		- Provide server side flushdb(2015-09-17)
		- The slave will flush db when receive copy_begin(2015-07-28)
	* Incompatible changes:
		- Will not support db size for redis clients(2015-08-07)
	* Bug fixes:
		- Fix ttl not be deleted when deleting the only one key with ttl in the db, issue#885(2016-03-02)
		- Fix Logger bug on multi-threads(2016-01-25)
		- Fix bug when ssdb-cli is soft linked(2016-01-25)
		- Fix zclear infinite loop when data is broken(2015-12-02)
		- Fix setbit crash on very big offset(2015-11-17)
		- Fix Jedis zadd() score in scientific notation(2015-10-22)
* 1.9.1
	* Incompatible changes:
		- zrank/zrrank return not_found(prev is error) if member not exists(2015-07-16)
		- PHP API zrank/zrrank return null(prev is false) if member not exists(2015-07-16)
* 1.9.0
	* New features:
		- Update MAX_PACKET_SIZE to 128MB(2015-04-28)
		- Process most read commands in reader threads, not main thread(2015-04-28)
		- Add bitcount command, which is similar to Redis's bitcount(2015-04-15)
		- Add zpop_front, zpop_back command(2015-04-01)
		- Support static library build for iOS(2015-03-26)
		- Update options.max_open_files default value to 500(2015-03-15)
		- Add version command(2015-03-10)
		- Add rkeys command(2015-02-15)
	* Bug fixes:
		- Fix replication status display error(2015-04-09)
* 1.8.1
	* Bug fixes: